k8s/deep-dive/3-security/network-policy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx

---
apiVersion: v1
kind: Pod
metadata:
  name: api-server
  labels:
    app: api-server
spec:
  containers:
    - name: api-server
      image: python:3.9
      ports:
        - containerPort: 80
      command: ["python", "-m", "http.server", "80"]
---
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  containers:
    - name: database
      image: postgres:13  # Placeholder image
